--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_svg: ^1.0.3
   font_awesome_flutter: ^10.1.0
   intl: ^0.17.0
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
