--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
+  flutter_spinkit: ^5.1.0
   flutter_svg: ^1.0.3
   font_awesome_flutter: ^10.1.0
   intl: ^0.17.0
