--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.dro_health_home_task">
    <application
-        android:label="dro_health_home_task"
+        android:label="Dro Health"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
