--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
+  flutter_launcher_icons: ^0.9.3
+  flutter_layout_grid: ^2.0.1
   flutter_spinkit: ^5.1.0
   flutter_svg: ^1.0.3
   font_awesome_flutter: ^10.1.0
@@ -40,9 +42,15 @@ dependencies:
   shimmer: ^2.0.0
 
 dev_dependencies:
+  bloc_test: ^9.0.3
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: 'ic_launcher'
+  ios: true
+  image_path: 'assets/images/dro_logo.png'
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -56,25 +64,15 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
+
   fonts:
     - family: Proxima
       fonts:
         - asset: assets/fonts/ProximaNova-Regular.otf
         - asset: assets/fonts/ProximaNova.ttf
           style: normal
-        
+
     - family: Roboto
       fonts:
         - asset: assets/fonts/Roboto-Regular.ttf
           style: normal
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
